--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,7 @@ body {
   padding: 0;
   box-sizing: border-box;
   background-color: #000;
+  overflow-x: hidden; /* PREVIENE scroll horizontal si algo se sale */
 }
 
 html {
